update getfirst